force-app/main/default/objects/NI_Cancellation__c/NI_Cancellation__c.object-meta.xml
<CustomObject>
    <label>Cancellation</label>
    <nameField>
        <displayFormat>CXL-{00000}</displayFormat>
        <label>Cancellation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancellations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>