force-app/main/default/objects/NI_Cancellation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account related to the Deployment Instance. This field is automatically updated based on the Deployment Instance and cannot be edited manually.</description>
    <inlineHelpText>Account related to the Deployment Instance. This field is automatically updated based on the Deployment Instance and cannot be edited manually.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>NI_Cancellations</relationshipName>
    <type>Lookup</type>
</CustomField>