force-app/main/default/objects/NI_Cancellation__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of the Account related to the Deployment Instance. This field is automatically updated based on the Deployment Instance and cannot be edited manually.</description>
    <inlineHelpText>Owner of the Account related to the Deployment Instance. This field is automatically updated based on the Deployment Instance and cannot be edited manually.</inlineHelpText>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NI_Cancellations</relationshipName>
    <type>Lookup</type>
</CustomField>