force-app/main/default/objects/NI_Cancellation__c/fields/Activity_Line_Fee__c.field-meta.xml
<CustomField>
    <fullName>Activity_Line_Fee__c</fullName>
    <description>Fee of the related Activity Line Item</description>
    <formula>Activity_Line_Item__r.Contract_Price_Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fee of the related Activity Line Item</inlineHelpText>
    <label>Activity Line Item Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>