force-app/main/default/objects/NI_Cancellation__c/fields/Activity_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Activity_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Activity Line Item related to the Deployment Instance that is being cancelled</description>
    <label>Activity Line Item</label>
    <referenceTo>Activity_Line_Item__c</referenceTo>
    <relationshipLabel>Cancellations</relationshipLabel>
    <relationshipName>Cancellations</relationshipName>
    <type>Lookup</type>
</CustomField>