force-app/main/default/objects/NI_Cancellation__c/fields/Activity_Line_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Activity_Line_Quantity__c</fullName>
    <description>Quantity of the related Activity Line Item record
NICC-035500 - Changed Decimal Places</description>
    <formula>Activity_Line_Item__r.Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantity of the related Activity Line Item record</inlineHelpText>
    <label>Activity Line Item Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>