force-app/main/default/objects/NI_Cancellation__c/fields/Activity_Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Activity_Line_Status__c</fullName>
    <formula>TEXT(Activity_Line_Item__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Line Status</label>
    <type>Text</type>
</CustomField>