force-app/main/default/objects/NI_Cancellation__c/fields/Amadeus_RSM__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_RSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-026959</description>
    <label>Amadeus RSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cancellations1</relationshipName>
    <type>Lookup</type>
</CustomField>