force-app/main/default/objects/NI_Cancellation__c/fields/Anticipated_Revenue_Loss__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Revenue_Loss__c</fullName>
    <description>NICC-026959</description>
    <formula>Renewal_Cancellation_Quantity__c  *  Activity_Line_Item__r.Renewal_Base_Price__c</formula>
    <label>Anticipated Revenue Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>