force-app/main/default/objects/NI_Cancellation__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>The account&apos;s Brand at the time the cancellation request was created</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The account&apos;s Brand at the time the cancellation request was created</inlineHelpText>
    <label>Brand</label>
    <length>80</length>
    <type>Text</type>
</CustomField>