force-app/main/default/objects/NI_Cancellation__c/fields/Cancel_Renewal_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Renewal_By_Date__c</fullName>
    <description>NICC-026959</description>
    <formula>Activity_Line_Item__r.Cancel_Renewal_By_Date__c</formula>
    <label>Cancel Renewal By Date</label>
    <type>Date</type>
</CustomField>