force-app/main/default/objects/NI_Cancellation__c/fields/Cancellation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancellation Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>