force-app/main/default/objects/NI_Cancellation__c/fields/Cancellation_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The number of accounts affected, including this one, by the cancellation of this specific DI&quot;</description>
    <inlineHelpText>The number of accounts affected, including this one, by the cancellation of this specific DI&quot;</inlineHelpText>
    <label>Number of Accounts Affected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>