force-app/main/default/objects/NI_Cancellation__c/fields/Competitor_Lost_To__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Lost_To__c</fullName>
    <description>Competitor the customer switched to</description>
    <inlineHelpText>Competitor the customer switched to</inlineHelpText>
    <label>Competitor Lost To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ad Astra</fullName>
            </value>
            <value>
                <fullName>Amadeus</fullName>
            </value>
            <value>
                <fullName>Artifax</fullName>
            </value>
            <value>
                <fullName>Caterease Software</fullName>
            </value>
            <value>
                <fullName>CaterEdge Software</fullName>
            </value>
            <value>
                <fullName>CaterPro Software</fullName>
            </value>
            <value>
                <fullName>CITY - Marriott</fullName>
            </value>
            <value>
                <fullName>CMX</fullName>
            </value>
            <value>
                <fullName>Envision</fullName>
            </value>
            <value>
                <fullName>Event Master PLUS by CBORD</fullName>
            </value>
            <value>
                <fullName>EventPro Planner</fullName>
            </value>
            <value>
                <fullName>Events Perfect</fullName>
            </value>
            <value>
                <fullName>Five Star Hotel Systems</fullName>
            </value>
            <value>
                <fullName>Hospitality Solutions Int&apos;l (HSI)</fullName>
            </value>
            <value>
                <fullName>Hotel Catalyst</fullName>
            </value>
            <value>
                <fullName>Hotel Concepts</fullName>
            </value>
            <value>
                <fullName>Hotel SalesPro</fullName>
            </value>
            <value>
                <fullName>InnFusion</fullName>
            </value>
            <value>
                <fullName>IQWARE</fullName>
            </value>
            <value>
                <fullName>ISAC - Starwood</fullName>
            </value>
            <value>
                <fullName>Kinetic Solutions</fullName>
            </value>
            <value>
                <fullName>Knowland Group</fullName>
            </value>
            <value>
                <fullName>Maestro Sales &amp; Catering Suite</fullName>
            </value>
            <value>
                <fullName>MeetingMatrix International</fullName>
            </value>
            <value>
                <fullName>Micros Systems, Inc.</fullName>
            </value>
            <value>
                <fullName>Multi-Systems, Inc.</fullName>
            </value>
            <value>
                <fullName>NFS Hospitality Corporation</fullName>
            </value>
            <value>
                <fullName>Northwind</fullName>
            </value>
            <value>
                <fullName>Ohio Reader Board</fullName>
            </value>
            <value>
                <fullName>On Q</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>