force-app/main/default/objects/NI_Cancellation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary property contact for this cancellation request.</description>
    <inlineHelpText>Primary property contact for this cancellation request.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>NI_Cancellations</relationshipName>
    <type>Lookup</type>
</CustomField>