force-app/main/default/objects/NI_Cancellation__c/fields/Customer_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requested_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>NICC-023634</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Requested Date</label>
    <type>Date</type>
</CustomField>