force-app/main/default/objects/NI_Cancellation__c/fields/Days_Late__c.field-meta.xml
<CustomField>
    <fullName>Days_Late__c</fullName>
    <description>NICC-026959</description>
    <formula>DATEVALUE(Renewal_Cancellation_Request_DateTime__c)-Cancel_Renewal_By_Date__c</formula>
    <label>Days Late</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>