force-app/main/default/objects/NI_Cancellation__c/fields/Deployment_Instance__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deployment Instance related to this cancellation</description>
    <inlineHelpText>Deployment Instance related to this cancellation</inlineHelpText>
    <label>Deployment Instance</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Asset.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipName>NI_Cancellations</relationshipName>
    <type>Lookup</type>
</CustomField>