force-app/main/default/objects/NI_Cancellation__c/fields/Deployment_Instance_Status__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Instance_Status__c</fullName>
    <description>NICC-018360</description>
    <formula>TEXT(Deployment_Instance__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deployment Instance Status</label>
    <type>Text</type>
</CustomField>