force-app/main/default/objects/NI_Cancellation__c/fields/DI_Not_Found__c.field-meta.xml
<CustomField>
    <fullName>DI_Not_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-025668</description>
    <inlineHelpText>Deployment Instance does not exist with matching Account &amp; Product SKU specified on this Cancellation record.</inlineHelpText>
    <label>DI Not Found</label>
    <type>Checkbox</type>
</CustomField>