force-app/main/default/objects/NI_Cancellation__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <defaultValue>DATE(2025,12,31)</defaultValue>
    <description>Date the cancellation takes effect</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the cancellation takes effect</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>