force-app/main/default/objects/NI_Cancellation__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Customer Engagement Record</description>
    <inlineHelpText>Related Customer Engagement Record</inlineHelpText>
    <label>Engagement</label>
    <referenceTo>NI_Customer_Relations_Engagement__c</referenceTo>
    <relationshipName>NI_Cancellations</relationshipName>
    <type>Lookup</type>
</CustomField>