force-app/main/default/objects/NI_Cancellation__c/fields/Finance_Request__c.field-meta.xml
<CustomField>
    <fullName>Finance_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-031087

The finance request related to this cancellation record.   This field is owned by Finance</description>
    <inlineHelpText>The finance request related to this cancellation record.  This field is updated by Finance</inlineHelpText>
    <label>Finance Request</label>
    <referenceTo>AH_Finance_Request__c</referenceTo>
    <relationshipLabel>Cancellations</relationshipLabel>
    <relationshipName>Cancellations</relationshipName>
    <type>Lookup</type>
</CustomField>