force-app/main/default/objects/NI_Cancellation__c/fields/Franchisor__c.field-meta.xml
<CustomField>
    <fullName>Franchisor__c</fullName>
    <description>Franchisor of the related Account record at the time the Cancellation record was created.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Franchisor of the related Account record at the time the Cancellation record was created.</inlineHelpText>
    <label>Franchisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>