force-app/main/default/objects/NI_Cancellation__c/fields/General_Reason__c.field-meta.xml
<CustomField>
    <fullName>General_Reason__c</fullName>
    <description>General reason the customer is cancelling
Updated NICC-026959
Updated NICC-030510</description>
    <inlineHelpText>General reason the customer is cancelling</inlineHelpText>
    <label>General Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affiliation Change</fullName>
            </value>
            <value>
                <fullName>Property Closure</fullName>
            </value>
            <value>
                <fullName>Selected Alternative Product</fullName>
            </value>
            <value>
                <fullName>User Reduction</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Cost Does Not Justify Benefit</fullName>
            </value>
            <value>
                <fullName>Not Using the System</fullName>
            </value>
            <value>
                <fullName>Functional Deficiencies</fullName>
            </value>
            <value>
                <fullName>Poor Customer Support</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Product End of Life</fullName>
            </value>
            <value>
                <fullName>Covid-19</fullName>
            </value>
            <value>
                <fullName>Transitional Subscriber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>