force-app/main/default/objects/NI_Cancellation__c/fields/Late_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Late_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-026959 - If the customer requested date is after the cancel renewal by date.</description>
    <inlineHelpText>If the customer requested date is after the cancel renewal by date.</inlineHelpText>
    <label>Late Cancellation</label>
    <type>Checkbox</type>
</CustomField>