force-app/main/default/objects/NI_Cancellation__c/fields/Late_Cancellation_Approved__c.field-meta.xml
<CustomField>
    <fullName>Late_Cancellation_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-026959 - Cx Late Approval Approved by Sales</description>
    <inlineHelpText>Cx Late Approval Approved by Sales</inlineHelpText>
    <label>Late Cancellation Approved</label>
    <type>Checkbox</type>
</CustomField>