force-app/main/default/objects/NI_Cancellation__c/fields/Late_Cancellation_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Late_Cancellation_Approved_Date__c</fullName>
    <description>NICC-026959</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date Sales approved the late cancellation</inlineHelpText>
    <label>Late Cancellation Approved Date</label>
    <type>Date</type>
</CustomField>