force-app/main/default/objects/NI_Cancellation__c/fields/Late_Cancellation_Not_Approved__c.field-meta.xml
<CustomField>
    <fullName>Late_Cancellation_Not_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-026959</description>
    <label>Late Cancellation Rejected</label>
    <type>Checkbox</type>
</CustomField>