force-app/main/default/objects/NI_Cancellation__c/fields/Late_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Late_Cancellation_Reason__c</fullName>
    <label>Late Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer has no contract to hold them to</fullName>
            </value>
            <value>
                <fullName>Customer notified within window, but was processed late internally</fullName>
            </value>
            <value>
                <fullName>Internal request to correct mistake</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>