force-app/main/default/objects/NI_Cancellation__c/fields/Management_Company__c.field-meta.xml
<CustomField>
    <fullName>Management_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account&apos;s Management Company at the time the cancellation request was submitted. This field is automatically updated based on the Deployment Instance and cannot be edited manually.</description>
    <inlineHelpText>The account&apos;s Management Company at the time the cancellation request was submitted. This field is automatically updated based on the Deployment Instance and cannot be edited manually.</inlineHelpText>
    <label>Management Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>NI_Cancellations_MgmntCo</relationshipName>
    <type>Lookup</type>
</CustomField>