force-app/main/default/objects/NI_Cancellation__c/fields/Master_Cancellation_Record__c.field-meta.xml
<CustomField>
    <fullName>Master_Cancellation_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The NI Cancellation record that this NI Cancellation record was created from</description>
    <inlineHelpText>The NI Cancellation record that this NI Cancellation record was created from</inlineHelpText>
    <label>Master Cancellation Record</label>
    <referenceTo>NI_Cancellation__c</referenceTo>
    <relationshipName>NI_ChildCancellations</relationshipName>
    <type>Lookup</type>
</CustomField>