force-app/main/default/objects/NI_Cancellation__c/fields/NI_Collector__c.field-meta.xml
<CustomField>
    <fullName>NI_Collector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce.com Change Request: NICC-010799

The NI Collector for this Account in Finance. This defaults to the User who has the &quot;NI Collector&quot; Account Team Role for this Account.</description>
    <inlineHelpText>The NI Collector for this Account in Finance. This defaults to the User who has the &quot;NI Collector&quot; Account Team Role for this Account.</inlineHelpText>
    <label>NI Collector</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cancellations</relationshipName>
    <type>Lookup</type>
</CustomField>