force-app/main/default/objects/NI_Cancellation__c/fields/Number_of_Users_Reduced__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Users_Reduced__c</fullName>
    <description>For user reduction cancellations, this is the number of users that are being removed</description>
    <inlineHelpText>For user reduction cancellations, this is the number of users that are being removed</inlineHelpText>
    <label>Number of Users Reduced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>