force-app/main/default/objects/NI_Cancellation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity related to the Deployment Instance.  This field is automatically updated based on the Deployment Instance and cannot be edited manually.</description>
    <inlineHelpText>Opportunity related to the Deployment Instance.  This field is automatically updated based on the Deployment Instance and cannot be edited manually.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>NI_Cancellations</relationshipName>
    <type>Lookup</type>
</CustomField>