force-app/main/default/objects/NI_Cancellation__c/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>Opportunity Number of the Opportunity related to the Deployment Instance</description>
    <formula>Opportunity__r.Opportunity_Number__c</formula>
    <inlineHelpText>Opportunity Number of the Opportunity related to the Deployment Instance</inlineHelpText>
    <label>Opportunity Number</label>
    <type>Text</type>
</CustomField>