force-app/main/default/objects/NI_Cancellation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Product Name of the Deployment Instance</description>
    <formula>Deployment_Instance__r.Product2.Name</formula>
    <inlineHelpText>Product Name of the Deployment Instance</inlineHelpText>
    <label>Product</label>
    <type>Text</type>
</CustomField>