force-app/main/default/objects/NI_Cancellation__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Product Code related to the Cancellation
NICC-034374 - Changed to point to Product2</description>
    <formula>Product2__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Code related to the Cancellation</inlineHelpText>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>