force-app/main/default/objects/NI_Cancellation__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Product Family related to the Cancellation
NICC-034374 - Changed to point to Product2</description>
    <formula>TEXT(Product2__r.Family)</formula>
    <inlineHelpText>Product Family related to the Cancellation</inlineHelpText>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>