force-app/main/default/objects/NI_Cancellation__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>Product Group of the Cancellation
NICC-034374 - Changed to point to Product2</description>
    <formula>Product2__r.Product_Group__r.Name</formula>
    <inlineHelpText>Product Group of the Cancellation</inlineHelpText>
    <label>Product Group</label>
    <type>Text</type>
</CustomField>