force-app/main/default/objects/NI_Cancellation__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>Product Line of the related Cancellation
NICC-034374 - Changed to point to Product2</description>
    <formula>TEXT(Product2__r.Product_Line_Global__c)</formula>
    <inlineHelpText>Product Line of the related Cancellation</inlineHelpText>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>