force-app/main/default/objects/NI_Cancellation__c/fields/Renewal_Cancellation_Note__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Cancellation_Note__c</fullName>
    <description>NICC-025668</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Customer&apos;s note about the renewal cancellation</inlineHelpText>
    <label>Renewal Cancellation Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>