force-app/main/default/objects/NI_Cancellation__c/fields/Renewal_Cancellation_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Cancellation_Quantity__c</fullName>
    <description>NICC-025668
NICC-035500 - Changed Decimal Places</description>
    <label>Renewal Cancellation Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>