force-app/main/default/objects/NI_Cancellation__c/fields/Renewal_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Cancellation_Reason__c</fullName>
    <description>NICC-025668
Updated NICC-026959
Updated NICC-030510</description>
    <label>Renewal Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affiliation Change</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Product doesn&apos;t meet need</fullName>
            </value>
            <value>
                <fullName>Property Closure</fullName>
            </value>
            <value>
                <fullName>User Reduction</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>No Longer Own Property</fullName>
                <isActive>false</isActive>
                <label>No Longer Own Property</label>
            </value>
            <value>
                <fullName>Property Extraction</fullName>
                <isActive>false</isActive>
                <label>Property Extraction</label>
            </value>
            <value>
                <fullName>Unhappy with Product</fullName>
                <isActive>false</isActive>
                <label>Unhappy with Product</label>
            </value>
            <value>
                <fullName>User License Reduction</fullName>
                <isActive>false</isActive>
                <label>User License Reduction</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>