force-app/main/default/objects/NI_Cancellation__c/fields/Renewal_Cancellation_Request_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Cancellation_Request_DateTime__c</fullName>
    <description>NICC-025668</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date/time of that the customer requested the cancellation/user reduction</inlineHelpText>
    <label>Renewal Cancellation Request Date/Time</label>
    <type>DateTime</type>
</CustomField>