force-app/main/default/objects/NI_Cancellation__c/fields/Renewal_Cancellation_Requested__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Cancellation_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-025668</description>
    <inlineHelpText>Customer has requested a cancellation or reduction</inlineHelpText>
    <label>Renewal Cancellation Requested</label>
    <type>Checkbox</type>
</CustomField>