force-app/main/default/objects/NI_Cancellation__c/fields/Renewal_Cancellation_Requester__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Cancellation_Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-025668</description>
    <label>Renewal Cancellation Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cancellation_Requester</relationshipName>
    <type>Lookup</type>
</CustomField>