force-app/main/default/objects/NI_Cancellation__c/fields/Renewal_Cancellation_Requesters_IP__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Cancellation_Requesters_IP__c</fullName>
    <description>NICC-025668</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>IP Address of customer who requested the cancellation/user reduction</inlineHelpText>
    <label>Renewal Cancellation Requesters IP</label>
    <length>60</length>
    <type>Text</type>
</CustomField>