force-app/main/default/objects/NI_Cancellation__c/fields/Reporting_Effective_Date_Year__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Effective_Date_Year__c</fullName>
    <description>USED FOR CORPORATE REPORTS. DO NOT CHANGE!

NICC-028037
This field is used for Cancellations Reporting by the Business Systems Team.</description>
    <formula>TEXT(YEAR( Effective_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The year of the Effective Date. This field is used for Corporate reporting by the Business Systems Team.</inlineHelpText>
    <label>Effective Year</label>
    <type>Text</type>
</CustomField>