force-app/main/default/objects/NI_Cancellation__c/fields/Retention_Completed__c.field-meta.xml
<CustomField>
    <fullName>Retention_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-026959</description>
    <inlineHelpText>This box will check when retention efforts are completed.</inlineHelpText>
    <label>Retention Completed</label>
    <type>Checkbox</type>
</CustomField>