force-app/main/default/objects/NI_Cancellation__c/fields/Retention_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Retention_Completed_Date__c</fullName>
    <description>NICC-026959</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Automatically updated the date/time the record changed from Pending Retention to another status</inlineHelpText>
    <label>Retention Completed Date</label>
    <type>Date</type>
</CustomField>