force-app/main/default/objects/NI_Cancellation__c/fields/Reviewed_by_Collector__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_by_Collector__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesforce.com Change Request: NICC-010799

This field is checked by the NI Collector once it has been reviewed</description>
    <inlineHelpText>This field is checked by the NI Collector once it has been reviewed</inlineHelpText>
    <label>Reviewed by Collector</label>
    <type>Checkbox</type>
</CustomField>