force-app/main/default/objects/NI_Cancellation__c/fields/Reviewed_By_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By_Fulfillment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesforce.com Change Request:  NICC-010799

Updated by Fulfillment once they have reviewed the Cancellation</description>
    <inlineHelpText>Updated by Fulfillment once they have reviewed the Cancellation</inlineHelpText>
    <label>Reviewed By Fulfillment</label>
    <type>Checkbox</type>
</CustomField>