force-app/main/default/objects/NI_Cancellation__c/fields/Softrax_Asset_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Softrax_Asset_End_Date__c</fullName>
    <description>End Date of the related Softrax Asset record</description>
    <formula>Softrax_Asset__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>End Date of the related Softrax Asset record</inlineHelpText>
    <label>Softrax Asset End Date</label>
    <type>Date</type>
</CustomField>