force-app/main/default/objects/NI_Cancellation__c/fields/Softrax_Asset_Total__c.field-meta.xml
<CustomField>
    <fullName>Softrax_Asset_Total__c</fullName>
    <description>Total revenue for the related Softrax Asset record</description>
    <formula>Softrax_Asset__r.Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total revenue for the related Softrax Asset record</inlineHelpText>
    <label>Softrax Asset Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>