force-app/main/default/objects/NI_Cancellation__c/fields/Solution_Domain__c.field-meta.xml
<CustomField>
    <fullName>Solution_Domain__c</fullName>
    <description>Solution Domain on Product</description>
    <formula>TEXT(Product2__r.Solution_Domain_Global__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Solution Domain on Product</inlineHelpText>
    <label>Solution Domain</label>
    <type>Text</type>
</CustomField>